syntax = "proto3";

option csharp_namespace = "GrpcWebApplication";

package usermessage;

import "google/protobuf/empty.proto";

service UserMessager {
  rpc SendMessage (MessageRequest) returns (google.protobuf.Empty);
  rpc SendMessages (stream MessageRequest) returns (google.protobuf.Empty);

  rpc GetMessages (google.protobuf.Empty) returns (stream MessageReply);
  rpc Messages (stream MessageRequest) returns (stream MessageReply);
}

message MessageRequest {
  string text = 1;
}

message MessageReply {
  int32 id = 1;
  string text = 2;
}